2016-03-14  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm: Fix compression for partial result
	* installcheck/amreport.pl: Check partial result
	* installcheck/catalogs/tapers1.cat,
	  installcheck/catalogs/tapers.cat: New catalogs to check taper
	  partial result
	* installcheck/catalogs/taperr.cat: Typo

2016-03-01  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/ScanInventory.pm: A no-reuse is not a new labelled tape
	* installcheck/Amanda_Taper_Scan_lexical.pl,
	  installcheck/Amanda_Taper_Scan_oldest.pl,
	  installcheck/Amanda_Taper_Scan_traditional.pl: Add check

2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Amanda_Rest_Runs.pl: Fix for Report/json.pm fix

2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/driver.c: fix for last dle span two tapes
	* device-src/vfs-device.c: Add a SLOW-WRITE property (for testing)
	* device-src/vfs-device.h: Add a SLOW-WRITE property (for testing)
	* installcheck/Installcheck/Config.pm (rm_param): New fucntion
	* installcheck/Installcheck/Run.pm (clean_taperoot: New function
	* installcheck/Makefile.am: Add tape_action
	* installcheck/tape_action.pl: New installcheck script to check the
	  tape_action function

2016-02-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	Patch by Micheal Burk
	* perl/Amanda/Report/json.pm: fixup

2016-02-25  Jean-Louis Martineau <martineau@zmanda.com>
	* all files: Update copyright notice

2016-02-24  Jean-Louis Martineau <martineau@zmanda.com>
	* config/libtool.m4: Fix for x86_64
	* contrib/libtool-for-x86_64.diff: Copy of the patch

2016-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/amstatus.pl: Test number printing
	* installcheck/Makefile.am: Add catalogs/number.cat
	* installcheck/catalogs/number.cat: New catalog file for testing
	  number

2016-02-22  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Give and error if MAX-RECV-SPEED or